# kr-housing-longrag-bench

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  DATASET_CARD.md  LICENSE  README.md  pyproject.toml
data/: excluded_sources.jsonl  qa_seed.jsonl  qa_v0.2_candidates.jsonl  qa_v0.3_candidates.jsonl  qa_v0.4_candidates.jsonl  qa_v0.5_candidates.jsonl  qa_v0.6_dev.jsonl  qa_v0.6_prompts.jsonl  qa_v0.6_realistic_candidates.jsonl  qa_v0.6_test_hidden_questions.jsonl  qa_v0.6_test_public.jsonl  source_manifest.jsonl  task_blueprints.jsonl  task_schema.json  v0.4_announcement_targets_seed.jsonl  v0.5_announcement_targets.jsonl
docs/: agent_workflow.md  annotation_batch_report.md  baseline_protocol_v06.md  baseline_results_v07.md  baseline_results_v09.md  dataset_statistics_v06.md  dataset_statistics_v08.md  dense_hybrid_rag_smoke_v07.md  evaluation_protocol.md  full_context_smoke_v07.md  public_reconstruction.md  quickstart_v06.md  rag_non_quote_retrieval_diagnostics_v07.md  rag_page_diversity_diagnostics_v07.md  rag_retrieval_diagnostics_v07.md  rag_smoke_v07.md  release_checklist.md  repository_scope_policy.md  source_selection_and_license_audit.md  v0.3_acquisition_status.md  v0.3_batch_report.md  v0.3_plan.md  v0.4_batch_report.md  v0.4_progress_report.md  v0.4_public_plan.md  v0.5_batch_report.md  v0.5_dataset_roadmap.md  v0.5_worker_prompt.md  v0.6_quality_report.md  v0.7_release_plan.md  v1_roadmap.md
prompts/: claude_code_v0.3_build_prompt.md  claude_code_v0.4_public_prompt.md  worker_corpus_build_prompt.md
(+72 files in other folders)
